tests/sessions/python/pure_uncaught_unpicklable_exception.txtar
-- main.py main --
from autokitteh import activity

# This is not unpicklable.
class X(Exception):
    def __init__(self, a, b):
        self._a, self._b = a, b
        super(X, self).__init__(a)

@activity
def callstuff():
    raise X(1, 2)


def main(_):
    callstuff()

-- error.txt --
error: X(1, None)

Traceback (most recent call last):
   ak-runner
    value = fn(*args, **kw)
  File "main.py", line 15, in main
    callstuff()
   ak-runner
    return self.runner.call_in_activity(func, args, kw)
   ak-runner
    return fut.result()
  py-lib/concurrent/futures/_base.py, line XXX, in result
    return self.__get_result()
  py-lib/concurrent/futures/_base.py, line XXX, in __get_result
    raise self._exception
main.X: (1, None)
